--- a/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
+++ b/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
@@ -933,7 +933,7 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="switch_doc_type">Odaberite format</string>
   <string name="tab_app">Više</string>
   <string name="tab_category">Kategorije</string>
-  <string name="tab_common_app">Aplik. &amp; mape</string>
+  <string name="tab_common_app">Aplikacije &amp; mape</string>
   <string name="tab_explore">Otkrij</string>
   <string name="tab_local">LOKALNO</string>
   <string name="tab_more">Više</string>
