--- a/Croatian/main/MiMover.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiMover.apk/res/values-hr/strings.xml
@@ -149,7 +149,9 @@
   <string name="clearable_edittext_clear_description">Izbriši</string>
   <string name="click_to_restore">Vratite stavke sustava da biste mogli normalno koristiti MIUI nakon vraćanja na tvorničke postavke. Dodirnite za početak.</string>
   <string name="close">Ztavori</string>
-  <string name="close_cellular_summary">Vaš uređaj sada koristi mobilne podatke zbog ograničenja sustava. Isključite mobilne podatke i ponovno se povežite s novim uređajem.</string>
+  <string name="close_cellular_summary">Vaš uređaj trenutno koristi mobilne podatke zbog ograničenja sustava. Isključite mobilne podatke i ponovno se povežite s novim uređajem.</string>
+  <string name="close_cellular_summary_pad">Vaš uređaj trenutno koristi mobilne podatke zbog ograničenja sustava. Isključite mobilne podatke i ponovno se povežite s novim uređajem.</string>
+  <string name="close_cellular_summary_phone">Vaš uređaj trenutno koristi mobilne podatke zbog ograničenja sustava. Isključite mobilne podatke i ponovno se povežite s novim uređajem.</string>
   <string name="close_cellular_title">"Ne mogu se povezati"</string>
   <string name="close_twice_auth_btn">Isključi autorizaciju s dva faktora</string>
   <string name="close_twice_auth_note">"Bilješka:
@@ -160,7 +162,7 @@ Posjetite https://appleid.apple.com/#!&amp;page=signin za isključivanje"</strin
   <string name="close_twice_auth_step_2">2. Prijavite se u Apple ID za koji želite onemogućiti dvofaktorsku provjeru identiteta, idite na odjeljak \"Sigurnost\" postavki računa i odaberite \"Uredi\".</string>
   <string name="close_twice_auth_step_3">3. Kliknite \"Isključi dvofaktorsku provjeru identiteta\". Kliknite ponovo za potvrdu.</string>
   <string name="close_twice_auth_steps">Slijedite ove korake za isključivanje dvofaktorske provjere autentičnosti za Apple ID:</string>
-  <string name="close_twice_auth_tutor">Isključite Apple ID dvofaktornu provjeru autentičnosti</string>
+  <string name="close_twice_auth_tutor">Isključite Apple ID dvofaktorsku provjeru autentičnosti</string>
   <string name="close_vpn_summary">Čini se da je vaš uređaj sada povezan s VPN-om. Isključite VPN da biste se mogli povezati s drugim uređajima.</string>
   <string name="close_vpn_title">Isključi VPN</string>
   <string name="cloud_service_check_dialog_message">Čini se da je sinkronizacija stavki i kontakata Galerije isključena. Uključite sinkronizaciju kako bi se ove stavke prikazale na ovom uređaju.</string>
@@ -302,6 +304,8 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
   <string name="guest_connect_dialog_ensure_text">Poveži</string>
   <string name="guest_connect_dialog_fail_message">"Ne mogu se povezati. Pokušajte ponovo."</string>
   <string name="guest_hint_connect_new_device">Odaberite novi uređaj</string>
+  <string name="guest_hint_connect_new_device_pad">Odaberite novi uređaj</string>
+  <string name="guest_hint_connect_new_device_phone">Odaberite novi uređaj</string>
   <string name="guest_install_app_hint_ensure">Preuzmi</string>
   <string name="guest_install_app_hint_summary">Nova verzija Mi Movera nije kompatibilna sa Mi Mi Mover-om instaliranom na ovom uređaju. Preuzmite i instalirajte novu verziju.</string>
   <string name="guest_install_app_hint_title">Preuzmite novu verziju Mi Movera</string>
@@ -391,6 +395,8 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
 2. Približite oba uređaja."</string>
   <string name="install_app_new_title">Skenirajte QR kod da biste instalirali Mi Mover na novi uređaj</string>
   <string name="install_app_old_title">Skenirajte QR kod da biste instalirali Mi Mover na stari uređaj</string>
+  <string name="install_app_old_title_pad">Skenirajte QR kod da biste instalirali Mi Mover na stari uređaj</string>
+  <string name="install_app_old_title_phone">Skenirajte QR kod da biste instalirali Mi Mover na stari uređaj</string>
   <string name="install_app_to_another_phone_content">Instalirajte Mi Mover na svoj novi uređaj</string>
   <string name="install_app_to_another_phone_content_global">Instalirajte Mi Mover</string>
   <string name="install_button">Instaliraj</string>
@@ -563,25 +569,45 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
   <string name="new_app_name">Nova verzija</string>
   <string name="new_main_activity_label">Mi Mover</string>
   <string name="new_provision_title">Prenesite stavke</string>
-  <string name="new_trans_intro_desc_2">Ne morate unijeti zaporku u novoj verziju Mi Movera. Samo otvorite Mi Mover na Vašem starom uređaju, dodirnite \"Šaljem\" i dodirnite ime hotspota na koji se želite priključiti.</string>
-  <string name="new_trans_intro_desc_3">Mi Mover treba prostor za pohranu kako bi napravila paketa za prijenos na Vašem starom uređaju prije slanja na novi. Oslobidite prostor za pohranu za nastavak.</string>
+  <string name="new_trans_intro_desc_2">Ne morate unijeti zaporku u novoj verziju Mi Movera. Samo otvorite Mi Mover na Vašem starom uređaju, dodirnite \"Šaljem\" i dodirnite naziv hotspota za povezivanje.</string>
+  <string name="new_trans_intro_desc_2_pad">"U novoj verziji Mi Movera nije potrebno unositi zaporku za hotspot. Samo otvorite Mi Mover na svom starom uređaju, dodirnite \"Ja sam pošiljatelj\" i dodirnite naziv hotspota za povezivanje."</string>
+  <string name="new_trans_intro_desc_2_phone">"U novoj verziji Mi Movera nije potrebno unositi zaporku za hotspot. Samo otvorite Mi Mover na svom starom uređaju, dodirnite \"Ja sam pošiljatelj\" i dodirnite naziv hotspota za povezivanje."</string>
+  <string name="new_trans_intro_desc_3">Mi Mover treba prostor za pohranu kako bi napravila paketa za prijenos na Vašem starom uređaju prije slanja na novi. Oslobodite prostor za pohranu za nastavak.</string>
   <string name="new_trans_intro_desc_4">Moguće da postoji problem s kompatibilnošću uređaja, sistema ili verzije aplikacije koji sprečava neke aplikacije da se uspješno prenesu.</string>
   <string name="new_trans_intro_desc_5">Neke aplikacije (npr. financijske usluge i alati za plaćanje) ne dozvoljavaju prijenos zaporki iz sigurnosnih razloga.</string>
   <string name="new_trans_intro_desc_6">Vaš novi Mi telefon možda nema za to potrebna dopuštenja.</string>
-  <string name="new_trans_intro_desc_7">Mi Mover može nastaviti gdje je stala prethodni puta, međutim možda će ipak morati sve ispočetka ukoliko uređaj ima problem s kompatibilnošću koji ne dozvoljava nastavak prekinutog prijenosa.</string>
+  <string name="new_trans_intro_desc_6_pad">"Podaci aplikacije ne mogu se prenijeti jer Mi Mover nema potrebna dopuštenja na uređajima koji nisu Xiaomi."</string>
+  <string name="new_trans_intro_desc_6_phone">"Podaci aplikacije ne mogu se prenijeti jer Mi Mover nema potrebna dopuštenja na uređajima koji nisu Xiaomi."</string>
+  <string name="new_trans_intro_desc_7">Mi Mover može nastaviti gdje je stao prethodni put, međutim možda će ipak morati sve ispočetka ukoliko uređaj ima problem s kompatibilnošću koji ne dozvoljava nastavak prekinutog prijenosa.</string>
   <string name="new_trans_intro_desc_8">Wechat povijest Vašeg starog uređaja zamijenit će Wechat povijest na novom uređaju tokom prijenosa.</string>
   <string name="new_trans_intro_desc_new">"%1$d. Provjerite je li Mi Mover na vašem novom uređaju ažuriran. Najnoviju verziju Mi Movera možete preuzeti u GetApps ili dodirnite ovdje:%2$s
 %3$d. Ako se hotspot i dalje ne pojavljuje u Mi Moveru, otvorite Wi-Fi postavke i provjerite vidite li je tamo. Ako je tako, vratite se na Mi Mover i dodirnite naziv hotspota."</string>
   <string name="new_trans_intro_desc_new_click">Preuzimanje</string>
+  <string name="new_trans_intro_desc_new_pad">%1$d. Provjerite je li Mi Mover na vašem novom uređaju ažuriran. Najnoviju verziju Mi Movera možete preuzeti u GetApps ili <Data>&lt;a href=%2$s>dodirnite ovdje&lt;/a></Data>".
+%3$d. Ako se hotspot i dalje ne prikazuje u Mi Moveru, otvorite Wi-Fi postavke i provjerite vidite li je tamo. Ako je tako, vratite se u Mi Mover i dodirnite naziv hotspota."</string>
+<string name="new_trans_intro_desc_new_pad_china">%1$d. Provjerite je li Mi Mover na vašem novom uređaju ažuriran. Najnoviju verziju Mi Movera možete preuzeti u GetApps ili <Data>&lt;a href=%2$s>dodirnite ovdje&lt;/a></Data>".
+%3$d. Ako se hotspot i dalje ne prikazuje u Mi Moveru, otvorite Wi-Fi postavke i provjerite vidite li je tamo. Ako je tako, vratite se u Mi Mover i dodirnite naziv hotspota."</string>
+<string name="new_trans_intro_desc_new_phone">%1$d. Provjerite je li Mi Mover na vašem novom uređaju ažuriran. Najnoviju verziju Mi Movera možete preuzeti u GetApps ili <Data>&lt;a href=%2$s>dodirnite ovdje&lt;/a></Data>".
+%3$d. Ako se hotspot i dalje ne pojavljuje u Mi Moveru, otvorite Wi-Fi postavke i provjerite vidite li je tamo. Ako je tako, vratite se u Mi Mover i dodirnite naziv hotspota."</string>
+<string name="new_trans_intro_desc_new_phone_china">%1$d. Provjerite je li Mi Mover na vašem novom uređaju ažuriran. Najnoviju verziju Mi Movera možete preuzeti u GetApps ili <Data>&lt;a href=%2$s>dodirnite ovdje&lt;/a></Data>".
+%3$d. Ako se hotspot i dalje ne pojavljuje u Mi Moveru, otvorite Wi-Fi postavke i provjerite vidite li je tamo. Ako je tako, vratite se u Mi Mover i dodirnite naziv hotspota."</string>
   <string name="new_trans_intro_desc_old">%d. Ako se hotspot još uvijek nije pojavio u Mi Moveru, otvorite Wi-Fi postavke i provjerite vidite li hotspot. Ako ga vidite, vratite se u Mi Mover i dodirnite naziv hotspota.</string>
   <string name="new_trans_intro_question_1">%d. Zašto ne mogu vidjeti hotspot novog uređaja na starom uređaju?</string>
+  <string name="new_trans_intro_question_1_pad">"%d. Zašto ne mogu vidjeti hotspot novog uređaja na starom?"</string>
+  <string name="new_trans_intro_question_1_phone">"%d. Zašto ne mogu vidjeti hotspot novog uređaja na starom?"</string>
   <string name="new_trans_intro_question_2">%d. Koja je zaporka hotspota?</string>
   <string name="new_trans_intro_question_3">%d. Zašto mi aplikacija govori da na mom starom uređaju nema dovoljno prostora za pohranu?</string>
+  <string name="new_trans_intro_question_3_pad">"%d. Zašto piše da na starom uređaju nema dovoljno prostora za pohranu?"</string>
+  <string name="new_trans_intro_question_3_phone">"%d. Zašto piše da na starom uređaju nema dovoljno prostora za pohranu?"</string>
   <string name="new_trans_intro_question_4">%d. Zašto se sve aplikacije ne prenose uspješno?</string>
   <string name="new_trans_intro_question_5">%d. Zašto zaporke računa nekih aplikacija trećih strana nisu uspješno prenesene?</string>
   <string name="new_trans_intro_question_6">%d. Zašto se podaci aplikacija trećih strana ne mogu prenijeti?</string>
+  <string name="new_trans_intro_question_6_pad">"%d. Zašto se podaci aplikacije ne mogu prenijeti s uređaja koji nije Xiaomi?"</string>
+  <string name="new_trans_intro_question_6_phone">"%d. Zašto se podaci aplikacije ne mogu prenijeti s uređaja koji nije Xiaomi?"</string>
   <string name="new_trans_intro_question_7">%d. Ukoliko izađem iz Mi Movera usred prijenosa, hoći li morati sljedeći put sve ispočetka?</string>
   <string name="new_trans_intro_question_8">%d. Zašto na novom uređaju nemam WeChat povijest?</string>
+  <string name="new_trans_intro_question_8_pad">%d. Zašto je moja povijest WeChata nestala na novom uređaju?</string>
+  <string name="new_trans_intro_question_8_phone">%d. Zašto je moja povijest WeChata nestala na novom uređaju?</string>
   <string name="new_version_transfer_downloading">Ažuriranje Mi Movera</string>
   <string name="new_version_transfer_downloading_progress">%s</string>
   <string name="new_version_transfer_upgrading">Ažuriranje…</string>
@@ -831,7 +857,9 @@ Oslobodite barem %s."</string>
   <string name="scanner_permission_alert_ok">Postavke</string>
   <string name="scanner_quit_alert_btn_negative">Prekid</string>
   <string name="scanner_quit_alert_btn_positive">Ne odustaj</string>
-  <string name="scanner_quit_alert_message">Ako ponovo napustite Mi Mover, dva ćete uređaja morati spojiti. Odustati svejedno?</string>
+  <string name="scanner_quit_alert_message">Ako sada zatvorite Mi Mover, morat ćete ponovno spojiti dva uređaja. Želite li svejedno zatvoriti?</string>
+  <string name="scanner_quit_alert_message_pad">"Ako sada zatvorite Mi Mover, morat ćete ponovno spojiti dva uređaja. Želite li svejedno zatvoriti?"</string>
+  <string name="scanner_quit_alert_message_phone">"Ako sada zatvorite Mi Mover, morat ćete ponovno spojiti dva uređaja. Želite li svejedno zatvoriti?"</string>
   <string name="scanner_quit_alert_title">Prekinuti sada?</string>
   <string name="scanner_send_dialog_btn">Razumijem</string>
   <string name="scanner_send_dialog_message">Ne isključujte Wi-Fi ili prebacivajte između mreža tijekom prijenosa.</string>
@@ -843,6 +871,8 @@ Oslobodite barem %s."</string>
   <string name="scanner_wechat_overwrite_hit">Zbog postavljenih ograničenja aplikacija trećih strana, povijest razgovora i ostali podaci aplikacija na Vašem novom uređaju bit će zamijenjeni onima s Vašeg starog uređaja tek kada je prijenos završen.</string>
   <string name="search_menu_title">Traži</string>
   <string name="searching_for_new_device">Traženje novog uređaja…</string>
+  <string name="searching_for_new_device_pad">Traženje novog uređaja…</string>
+  <string name="searching_for_new_device_phone">Traženje novog uređaja…</string>
   <string name="secret_package_title_file">Datoteke</string>
   <string name="secret_package_title_gallery">Albumi</string>
   <string name="secret_package_title_note">Napomene</string>
@@ -875,6 +905,8 @@ Oslobodite barem %s."</string>
   <string name="select_mi_summary">Xiaomi i Redmi</string>
   <string name="select_mi_title">Xiaomi</string>
   <string name="select_old_device_title">Odaberite model starog uređaja</string>
+  <string name="select_old_device_title_pad">Odaberite model starog uređaja</string>
+  <string name="select_old_device_title_phone">Odaberite model starog uređaja</string>
   <string name="selected">Odabrano</string>
   <string name="send">Pošalji</string>
   <string name="send_sms_for_sync_notice">Odlazna SMS poruka može biti potrebna za aktiviranje ove usluge. Vaš mobilni operater će vam naplatiti tu poruku.</string>
@@ -951,6 +983,7 @@ Oslobodite barem %s."</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
   <string name="thursday_shortest">Č</string>
+  <string name="time">Vremensko razdoblje</string>
   <string name="time_picker_dialog_title">Postavi vrijeme</string>
   <string name="time_spent">Vrijeme: %1$s</string>
   <string name="tips_button_hint">Prvo provjerite svaku stavku za potvrdu</string>
@@ -1008,6 +1041,8 @@ Preuzmite i instalirajte Mi Mover."</string>
   <string name="trans_install_guide_old_content_first">"1. Učitajte ovaj QR kod na svojem starom uređaju.
 2. Preuzmite i instalirajte Mi Mover.
 3. Dodirnite donju tipku kada je instaliranje završeno."</string>
+  <string name="trans_install_guide_old_content_first_pad">Skenirajte ovaj QR kôd svojim starim uređajem kako biste preuzeli i instalirali Mi Mover.</string>
+  <string name="trans_install_guide_old_content_first_phone">Skenirajte ovaj QR kôd svojim starim uređajem kako biste preuzeli i instalirali Mi Mover.</string>
   <string name="trans_install_guide_text">Skenirajte za ažuriranje Mi Movera</string>
   <string name="trans_intro_title">Često postavljena pitanja</string>
   <string name="trans_main_activity_tutor_first">"Prenesite stavke na novi uređaj"</string>
