--- a/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
@@ -268,6 +268,11 @@
   <string name="category_group">Razvrstaj aplikacije</string>
   <string name="category_group_summary">Razvrstaj aplikacije u ladici aplikacija</string>
   <string name="category_not_selected">Dostupne aplikacije</string>
+  <string name="change_layout_type_dialog_action_negative">Odustani</string>
+  <string name="change_layout_type_dialog_action_positive">Promijeni</string>
+  <string name="change_layout_type_dialog_content_small_search">Primjenom izgleda \"%1$s\" isključit će se \"Kompaktno pretraživanje\" i vaše će se aplikacije preurediti.</string>
+  <string name="change_layout_type_dialog_content_super_xiao_ai">Primjenom izgleda \"%1$s\" isključit će se \"Pitajte Xiaomi Hyper XiaoAi\" i vaše će se aplikacije preurediti.</string>
+  <string name="change_layout_type_dialog_title">Promijeni izgled početnog zaslona</string>
   <string name="change_wallpaper">Promjeni</string>
   <string name="character_counter_content_description">Unešeno znakova %1$d od %2$d</string>
   <string name="character_counter_overflowed_content_description">Prekoračeno je ograničenje broja znakova %1$d od %2$d</string>
