--- a/Croatian/main/ThemeManager.apk/res/values-hr/strings.xml
+++ b/Croatian/main/ThemeManager.apk/res/values-hr/strings.xml
@@ -1839,7 +1839,7 @@ Pružit ćemo vam više informacija kada se ponovno povežete s internetom."</st
   <string name="privacy_phone_logoff_service_content">Otkažite usluge Tema</string>
   <string name="privacy_phone_logoff_theme_content_3">%d. Sve teme, pozadine, dinamičke pozadine, fontovi, ikone i melodije zvona preuzete na ovaj uređaj.</string>
   <string name="privacy_phone_logoff_theme_content_4">%d. Svi zapisi povijesti pretraživanja, postavke dopuštenja, postavke i predmemorije izrađene na ovom uređaju.</string>
-  <string name="privacy_phone_logoff_theme_service_detail_content_1">"%d. Provjerite imate li pravo otkazati usluge prije nego što nastavite.
+  <string formatted="false" name="privacy_phone_logoff_theme_service_detail_content_1">"%d. Provjerite imate li pravo otkazati usluge prije nego što nastavite.
   %2$d. Otkazivanje usluga tema neće utjecati na normalno korištenje drugih Xiaomi proizvoda.
   %3$d. Otkazivanje usluge je nepovratna radnja. Sigurnosno kopirajte sve važne stavke prije nego što nastavite jer bi se mogle trajno izbrisati. Imajte na umu da nećete moći preispitati svoju odluku nakon što usluge budu otkazane. Sljedeći će podaci biti trajno izbrisani ili anonimizirani nakon otkazivanja usluge (osim ako je drugačije propisano zakonima i propisima ili na drugi način zahtijevaju regulatorna tijela):"</string>
   <string name="privacy_phone_logoff_theme_service_detail_content_2">"Sve narudžbe (uključujući plaćene) napravljene na Xiaomi uređajima. Više nećete moći koristiti kupljene artikle.
@@ -1857,7 +1857,7 @@ Pružit ćemo vam više informacija kada se ponovno povežete s internetom."</st
   <string name="privacy_phone_read_theme_privacy_policy">&lt;Data&gt;"Pročitao sam i prihvaćam \"&amp;lt;font color=\"#8E92B0\"&amp;gt;&amp;lt;/color&amp;gt;&amp;lt;a href=\"%1$s\"&amp;gt;Izjava o povlačenju suglasnosti na Pravila o privatnosti Tema&amp;lt;/a&amp;gt;&amp;lt;/font&amp;gt;\"."&lt;/Data&gt;</string>
   <string name="privacy_phone_revoke_agree_content_3">%d. Sve teme, pozadine, dinamičke pozadine, fontovi, ikone i melodije zvona preuzete na ovaj uređaj.</string>
   <string name="privacy_phone_revoke_agree_content_4">%d. Svi zapisi povijesti pretraživanja, postavke dopuštenja, postavke i predmemorije izrađene na ovom uređaju.</string>
-  <string name="privacy_phone_revoke_agree_detail_content_1">"%1$d.Provjerite imate li pravo povući suglasnost prije nego što nastavite.
+  <string formatted="false" name="privacy_phone_revoke_agree_detail_content_1">"%1$d. Provjerite imate li pravo povući suglasnost prije nego što nastavite.
  %2$d. Vaše povlačenje suglasnosti na Pravila o privatnosti Tema neće utjecati na normalno korištenje drugih Xiaomi proizvoda.
   %d. Povlačenje suglasnosti je nepovratna radnja. Sigurnosno kopirajte sve važne stavke prije nego što nastavite jer bi se mogle trajno izbrisati. Imajte na umu da nećete moći preispitati svoju odluku nakon povlačenja suglasnosti. Sljedeći podaci bit će trajno izbrisani ili anonimizirani nakon povlačenja suglasnosti (osim ako je drugačije propisano zakonima i propisima ili na drugi način zahtijevaju regulatorna tijela):"</string>
   <string name="privacy_phone_revoke_agree_detail_content_2">"Sve narudžbe (uključujući plaćene) napravljene na Xiaomi uređajima na kojima ste koristili svoj Xiaomi račun. Više nećete moći koristiti kupljene artikle.
